--- a/web/index.html
+++ b/web/index.html
@@ -24,6 +24,10 @@
 </head>
 <body>
 <div id="allmap"></div>
+<a href="https://github.com/yrjyrj123/ziRoom"><img style="position: absolute; top: 0; right: 0; border: 0;"
+                                                   src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67"
+                                                   alt="Fork me on GitHub"
+                                                   data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
 
 </body>
 </html>
@@ -36,13 +40,13 @@
     map.centerAndZoom(new BMap.Point(116.404, 39.915), 11);
 
     var top_left_navigation = new BMap.NavigationControl();
-    var top_right_navigation = new BMap.NavigationControl({
-        anchor: BMAP_ANCHOR_TOP_RIGHT,
-        type: BMAP_NAVIGATION_CONTROL_SMALL
-    });
+//    var top_right_navigation = new BMap.NavigationControl({
+//        anchor: BMAP_ANCHOR_TOP_RIGHT,
+//        type: BMAP_NAVIGATION_CONTROL_SMALL
+//    });
 
     map.addControl(top_left_navigation);
-    map.addControl(top_right_navigation);
+//    map.addControl(top_right_navigation);
 
     function draw_rooms(rooms, room_type, color) {
         var points = [];
