--- a/web/index.html
+++ b/web/index.html
@@ -38,38 +38,62 @@
 
     var map = new BMap.Map("allmap");
     map.centerAndZoom(new BMap.Point(116.404, 39.915), 11);
-
+    map.enableScrollWheelZoom(true);
     var top_left_navigation = new BMap.NavigationControl();
-//    var top_right_navigation = new BMap.NavigationControl({
-//        anchor: BMAP_ANCHOR_TOP_RIGHT,
-//        type: BMAP_NAVIGATION_CONTROL_SMALL
-//    });
 
     map.addControl(top_left_navigation);
-//    map.addControl(top_right_navigation);
+
+    map.addEventListener("zoomend", redraw_rooms);
+    map.addEventListener("dragend", redraw_rooms);
+
+    function redraw_rooms() {
+        map.clearOverlays();
+        draw_rooms(rooms_cache["whole_rooms"], "整租", '#009966');
+        draw_rooms(rooms_cache["share_rooms"], "合租", '#cc3333');
+    }
+
+    function filter_room(room) {
+        return true;
+    }
 
     function draw_rooms(rooms, room_type, color) {
         var points = [];
+        var bounds = map.getBounds();
+        var sw_point = bounds.getSouthWest();
+        var es_point = bounds.getNorthEast();
+        var label_count = 0;
         for (var i = 0; i < rooms.length; i++) {
             var item = rooms[i];
-            var point = new BMap.Point(item["longitude"], item["latitude"]);
-            point.room = item;
-            points.push(point);
+            if (!filter_room(item)) {
+                continue
+            }
+            var lng = item['longitude'];
+            var lat = item['latitude'];
+            if (lng >= sw_point.lng && lng <= es_point.lng && lat >= sw_point.lat && lat <= es_point.lat) {
+                var point = new BMap.Point(lng, lat);
+                point.room = item;
+                points.push(point);
+                if (label_count++ < 500) {
+                    var title = item['area_display'] + '平-' + item['sell_price'] + '-' + item['name'];
+                    var label = new BMap.Label(title, {position: point});
+                    map.addOverlay(label);
+                }
+            }
         }
 
         var pointCollection = new BMap.PointCollection(points, {size: BMAP_POINT_SIZE_BIG, color: color});
         pointCollection.addEventListener('click', function (e) {
             var item = e.point.room;
 
-            room_status=item["room_status"];
-            if (room_status=="dzz"){
-                room_status="待出租";
-            }else if(room_status=="tzpzz" || room_status=="zxpzz"){
-                room_status="配置中";
-            }else if(room_status=="yxd"){
-                room_status="已下订";
-            }else if(room_status=="ycz"){
-                room_status="已出租";
+            room_status = item["room_status"];
+            if (room_status == "dzz") {
+                room_status = "待出租";
+            } else if (room_status == "tzpzz" || room_status == "zxpzz") {
+                room_status = "配置中";
+            } else if (room_status == "yxd") {
+                room_status = "已下订";
+            } else if (room_status == "ycz") {
+                room_status = "已出租";
             }
 
             var content = "<a href=\"http:" + item["url"] + "\" target='_blank'>" + item["name"] + "</a>";
@@ -77,7 +101,7 @@
             var infoWindow = new BMap.InfoWindow(content, {
                 width: 250,
                 height: 80,
-                title: room_type+" : "+room_status
+                title: room_type + " : " + room_status
             });
             var point = new BMap.Point(e.point.lng, e.point.lat);
 
